--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -1,29 +1,30 @@
 .flip-card {
-    width: 100%;
+    width: 95%;
     height: 100%;
-    position: relative;
     transition: transform 1s;
     transform-style: preserve-3d;
-
     cursor: pointer;
     padding: 24px 16px;
     margin: auto;
-    background-image: url("../../assets/flip-background.png");
-    background-size: cover;
 }
 
 .flip-card-face {
+    padding: 24px 0;
     height: 100%;
     width: 100%;
     backface-visibility: hidden;
 }
 
+.flip-card-face_front {
+    background-image: url("../../assets/flip-background.png");
+    background-size: cover;
+}
+
 .flip-card-face_back {
+    background-color: cornflowerblue;
     transform: rotateY(180deg);
 }
 
-/*
 .flip-card:hover {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
- */
