--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -1,6 +1,6 @@
 .flip-card {
-    width: 768px;
-    height: 545px;
+    width: 100%;
+    height: 100%;
     position: relative;
 
     transition: transform 1s;
@@ -28,6 +28,6 @@
     transform: rotateY(180deg);
 }
 
-.flip-card:hover {
+.flipped {
     transform: rotateY(180deg);
 }
