--- a/src/components/weather-forecast/WeatherForecast.css
+++ b/src/components/weather-forecast/WeatherForecast.css
@@ -1,5 +1,6 @@
 .weather-forecast_container {
     display: flex;
+    width: 100%;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
