Moved assets in public folder (Codesandbox fix)

--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -17,7 +17,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url("../../assets/flip-background.png");
+    background-image: url("/assets/flip-background.png");
 }
 
 .flip-card-face_front {
