Fixes, refactor and clean up

--- a/src/components/weather-forecast/components/weather-forecast-item/WeatherForecastItem.css
+++ b/src/components/weather-forecast/components/weather-forecast-item/WeatherForecastItem.css
@@ -8,7 +8,7 @@
 /* ITEM SELECTION ANIMATION */
 @keyframes weather-forecast-item--selected {
     from {
-        border: 0;
+        border: 1px solid transparent;
         background-color: transparent;
     }
     to {
