--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -17,6 +17,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    background-color: #232e3e;
     background-image: url("../../assets/flip-background.png");
 }
 
