--- a/src/components/current-weather/CurrentWeather.css
+++ b/src/components/current-weather/CurrentWeather.css
@@ -1,5 +1,5 @@
 .current-weather_container {
-    margin-bottom: 15px;
+    margin-bottom: 24px;
     display: flex;
     flex-direction: column;
 }
@@ -16,4 +16,10 @@
     font-weight: 300;
     text-align: center;
     margin-bottom: 7px;
+}
+
+.current-weather_icon {
+    height: 130px;
+    width: 220px;
+    margin: auto;
 }
