--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -1,13 +1,13 @@
 .flip-card {
     width: 100%;
     height: 100%;
+    /*margin: auto;*/
+    cursor: pointer;
+    /*padding: 24px 16px;*/
     position: relative;
 
     transition: transform 1s;
     transform-style: preserve-3d;
-    cursor: pointer;
-    padding: 24px 16px;
-    margin: auto;
 }
 
 .flip-card-face {
@@ -18,6 +18,8 @@
     top: 0;
     left: 0;
     background-color: #232e3e;
+    background-repeat: no-repeat;
+    background-size: auto;
     background-image: url("/assets/flip-background.png");
 }
 
