--- a/src/components/weather-forecast/WeatherForecast.css
+++ b/src/components/weather-forecast/WeatherForecast.css
@@ -3,7 +3,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
     overflow: scroll;
 }
 
