--- a/src/components/flip-card/FlipCard.css
+++ b/src/components/flip-card/FlipCard.css
@@ -1,33 +1,29 @@
 .flip-card {
-    width: 100%;
-    height: 100%;
-    /*margin: auto;*/
     cursor: pointer;
-    /*padding: 24px 16px;*/
-    position: relative;
-
     transition: transform 1s;
     transform-style: preserve-3d;
 }
 
 .flip-card-face {
-    height: 100%;
-    width: 100%;
     backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
     background-color: #232e3e;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
     background-image: url("/assets/flip-background.png");
 }
 
 .flip-card-face_front {
-    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
 
 .flip-card-face_back {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     transform: rotateY(180deg);
 }
 
