--- a/src/components/weather-forecast/WeatherForecast.css
+++ b/src/components/weather-forecast/WeatherForecast.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    overflow: scroll;
+    /*overflow: scroll;*/
 }
 
 .weather-forecast_placeholder {
